--- a/src/app/notifications-feed/notifications-feed.component.html
+++ b/src/app/notifications-feed/notifications-feed.component.html
@@ -1,16 +1,15 @@
 <div id="notifications-feed" class="notification-menu">
     <h5>Notifications feed </h5>
-    <p>Use hitters tp see specific type of content</p>
+    <p>Use hitters to see specific type of content</p>
 
     <ul>
-        <li class="button-feed button-selected"> <i class="far fa-bell"></i> </li>
-        <li class="button-feed"> <i class="far fa-comment"></i> </li>
-        <li class="button-feed"> <i class="fas fa-mobile"></i> </li>
-        <li class="button-feed"> <i class="far fa-hand-point-up"></i> </li>
+        <li class="icon-type icon-selected"> <i class="far fa-bell"></i> </li>
+        <li class="icon-type"> <i class="far fa-comment"></i> </li>
+        <li class="icon-type"> <i class="fas fa-mobile"></i> </li>
+        <li class="icon-type"> <i class="far fa-hand-point-up"></i> </li>
     </ul>
 
     <div class="day-separator"> 
-        
         <p> Today </p> 
     </div>
 
