--- a/src/app/sent-campaings/sent-campaings.component.scss
+++ b/src/app/sent-campaings/sent-campaings.component.scss
@@ -1,8 +1,16 @@
+//GENERAL
+
 h2{
     font-weight: bold;
     margin-top: 3%;
     margin-left: 10%;
 }
+
+.title{
+    width: 30%;
+}
+
+// TABLE
 
 table{
     margin-left: 10%;
@@ -22,35 +30,5 @@ table{
     td{
         text-align: center; 
     }
-}
-
-.title{
-    width: 30%;
-}
-
-.number-messages{
-    border: 10px solid #0321d7;
-    height: 10px;
-    width: 10px;
-    border-radius: 50%;
-    background-color:#0321d7;
-    
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle;
-    color: white;
-    font-size: 60%;
-}
-
-.empty-messages{
-    border: 10px solid #C0C0C0;
-    height: 10px;
-    width: 10px;
-    border-radius: 50%;
-    
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle;
-
 }
 
