--- a/src/app/campaigns/campaigns.component.html
+++ b/src/app/campaigns/campaigns.component.html
@@ -28,5 +28,6 @@
 <app-notifications-feed></app-notifications-feed>
 
 <!-- CONTENT -->
-
-<app-sent-campaings></app-sent-campaings>
+<div>  
+  <app-sent-campaings></app-sent-campaings>
+</div>
