--- a/src/app/campaigns/campaigns.component.scss
+++ b/src/app/campaigns/campaigns.component.scss
@@ -1,6 +1,4 @@
-/*
-   SUB MENU
-*/
+//   SUB MENU
 
 .sub-menu{
     margin-top: 10px;
@@ -35,3 +33,4 @@ li:hover{
 #submenu{
     width: 100%;
 }
+
