--- a/src/app/sent-campaings/sent-campaings.component.html
+++ b/src/app/sent-campaings/sent-campaings.component.html
@@ -1,3 +1,4 @@
+<div class="sent-campaigns">
 <div>
     <h2> Lastest campaigns </h2>
 </div>
@@ -28,6 +29,7 @@
                 {{campaign.newMessages}}
             </td>
         </tr>
-    </tbody>
-  </table>
+      </tbody>
+    </table>
+  </div>
 </div>
